force-app/main/default/objects/Trek_Booking__c/Trek_Booking__c.object-meta.xml
<CustomObject>
    <label>Trek Booking</label>
    <nameField>
        <label>Trek Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trek Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>