force-app/main/default/objects/Trek_Booking__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Trek Bookings</relationshipLabel>
    <relationshipName>Trek_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>