force-app/main/default/objects/Trek_Booking__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guide</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Guide is Already Assigned Cannot Assign Again.</errorMessage>
        <filterItems>
            <field>Guide__c.isBooked__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <filterItems>
            <field>$Source.Booking_Status__c</field>
            <operation>notEqual</operation>
            <value>Confirmed</value>
        </filterItems>
        <infoMessage>Only available guides can be assigned.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Guide__c</referenceTo>
    <relationshipLabel>Trek Bookings</relationshipLabel>
    <relationshipName>Trek_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>