force-app/main/default/objects/Trek_Booking__c/fields/Trek__c.field-meta.xml
<CustomField>
    <fullName>Trek__c</fullName>
    <description>Hello</description>
    <label>Trek</label>
    <referenceTo>Trek__c</referenceTo>
    <relationshipLabel>Trek Bookings</relationshipLabel>
    <relationshipName>Trek_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>