force-app/main/default/objects/Trek_Booking__c/validationRules/Booking_Date_Cannot_Be_Past_Date_Modifie.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Date_Cannot_Be_Past_Date_Modifie</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISNEW() &amp;&amp; Booking_Date__c &lt; TODAY(), 
    NOT(ISNEW()) &amp;&amp; ISCHANGED(Booking_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Booking_Date__c</errorDisplayField>
    <errorMessage>Booking Date Should Not Be Past Date</errorMessage>
</ValidationRule>